lib/llm/tests/snapshots/responses_replay__function_call_parallel.snap
---
source: lib/llm/tests/responses_replay.rs
expression: redacted_events(&text)
---
[
  {
    "event": "response.created",
    "data": {
      "type": "response.created",
      "sequence_number": 0,
      "response": {
        "background": false,
        "created_at": 1000000000,
        "id": "[ID]",
        "max_output_tokens": 256,
        "metadata": {},
        "model": "harness-model",
        "object": "response",
        "output": [],
        "parallel_tool_calls": true,
        "service_tier": "auto",
        "status": "in_progress",
        "temperature": 1.0,
        "text": {
          "format": {
            "type": "text"
          }
        },
        "tool_choice": "auto",
        "tools": [
          {
            "type": "function",
            "name": "read_file",
            "parameters": {
              "type": "object",
              "properties": {
                "path": {
                  "type": "string"
                }
              },
              "required": [
                "path"
              ]
            },
            "strict": true
          }
        ],
        "top_logprobs": 0,
        "top_p": 1.0,
        "truncation": "disabled",
        "billing": null,
        "completed_at": null,
        "conversation": null,
        "error": null,
        "incomplete_details": null,
        "instructions": null,
        "max_tool_calls": null,
        "previous_response_id": null,
        "prompt": null,
        "prompt_cache_key": null,
        "prompt_cache_retention": null,
        "reasoning": null,
        "safety_identifier": null,
        "usage": null,
        "presence_penalty": 0.0,
        "frequency_penalty": 0.0,
        "store": false
      }
    }
  },
  {
    "event": "response.in_progress",
    "data": {
      "type": "response.in_progress",
      "sequence_number": 1,
      "response": {
        "background": false,
        "created_at": 1000000000,
        "id": "[ID]",
        "max_output_tokens": 256,
        "metadata": {},
        "model": "harness-model",
        "object": "response",
        "output": [],
        "parallel_tool_calls": true,
        "service_tier": "auto",
        "status": "in_progress",
        "temperature": 1.0,
        "text": {
          "format": {
            "type": "text"
          }
        },
        "tool_choice": "auto",
        "tools": [
          {
            "type": "function",
            "name": "read_file",
            "parameters": {
              "type": "object",
              "properties": {
                "path": {
                  "type": "string"
                }
              },
              "required": [
                "path"
              ]
            },
            "strict": true
          }
        ],
        "top_logprobs": 0,
        "top_p": 1.0,
        "truncation": "disabled",
        "billing": null,
        "completed_at": null,
        "conversation": null,
        "error": null,
        "incomplete_details": null,
        "instructions": null,
        "max_tool_calls": null,
        "previous_response_id": null,
        "prompt": null,
        "prompt_cache_key": null,
        "prompt_cache_retention": null,
        "reasoning": null,
        "safety_identifier": null,
        "usage": null,
        "presence_penalty": 0.0,
        "frequency_penalty": 0.0,
        "store": false
      }
    }
  },
  {
    "event": "response.output_item.added",
    "data": {
      "type": "response.output_item.added",
      "sequence_number": 2,
      "output_index": 0,
      "item": {
        "type": "function_call",
        "arguments": "",
        "call_id": "call_p0",
        "name": "read_file",
        "id": "[ID]",
        "status": "in_progress"
      }
    }
  },
  {
    "event": "response.function_call_arguments.delta",
    "data": {
      "type": "response.function_call_arguments.delta",
      "sequence_number": 3,
      "item_id": "[ID]",
      "output_index": 0,
      "delta": "{\"path\":\"/a\"}"
    }
  },
  {
    "event": "response.function_call_arguments.done",
    "data": {
      "type": "response.function_call_arguments.done",
      "name": "read_file",
      "sequence_number": 4,
      "item_id": "[ID]",
      "output_index": 0,
      "arguments": "{\"path\":\"/a\"}"
    }
  },
  {
    "event": "response.output_item.done",
    "data": {
      "type": "response.output_item.done",
      "sequence_number": 5,
      "output_index": 0,
      "item": {
        "type": "function_call",
        "arguments": "{\"path\":\"/a\"}",
        "call_id": "call_p0",
        "name": "read_file",
        "id": "[ID]",
        "status": "completed"
      }
    }
  },
  {
    "event": "response.output_item.added",
    "data": {
      "type": "response.output_item.added",
      "sequence_number": 6,
      "output_index": 1,
      "item": {
        "type": "function_call",
        "arguments": "",
        "call_id": "call_p1",
        "name": "read_file",
        "id": "[ID]",
        "status": "in_progress"
      }
    }
  },
  {
    "event": "response.function_call_arguments.delta",
    "data": {
      "type": "response.function_call_arguments.delta",
      "sequence_number": 7,
      "item_id": "[ID]",
      "output_index": 1,
      "delta": "{\"path\":\"/b\"}"
    }
  },
  {
    "event": "response.function_call_arguments.done",
    "data": {
      "type": "response.function_call_arguments.done",
      "name": "read_file",
      "sequence_number": 8,
      "item_id": "[ID]",
      "output_index": 1,
      "arguments": "{\"path\":\"/b\"}"
    }
  },
  {
    "event": "response.output_item.done",
    "data": {
      "type": "response.output_item.done",
      "sequence_number": 9,
      "output_index": 1,
      "item": {
        "type": "function_call",
        "arguments": "{\"path\":\"/b\"}",
        "call_id": "call_p1",
        "name": "read_file",
        "id": "[ID]",
        "status": "completed"
      }
    }
  },
  {
    "event": "response.completed",
    "data": {
      "type": "response.completed",
      "sequence_number": 10,
      "response": {
        "background": false,
        "created_at": 1000000000,
        "completed_at": 1000000000,
        "id": "[ID]",
        "max_output_tokens": 256,
        "metadata": {},
        "model": "harness-model",
        "object": "response",
        "output": [
          {
            "type": "function_call",
            "arguments": "{\"path\":\"/a\"}",
            "call_id": "call_p0",
            "name": "read_file",
            "id": "[ID]",
            "status": "completed"
          },
          {
            "type": "function_call",
            "arguments": "{\"path\":\"/b\"}",
            "call_id": "call_p1",
            "name": "read_file",
            "id": "[ID]",
            "status": "completed"
          }
        ],
        "parallel_tool_calls": true,
        "service_tier": "auto",
        "status": "completed",
        "temperature": 1.0,
        "text": {
          "format": {
            "type": "text"
          }
        },
        "tool_choice": "auto",
        "tools": [
          {
            "type": "function",
            "name": "read_file",
            "parameters": {
              "type": "object",
              "properties": {
                "path": {
                  "type": "string"
                }
              },
              "required": [
                "path"
              ]
            },
            "strict": true
          }
        ],
        "top_logprobs": 0,
        "top_p": 1.0,
        "truncation": "disabled",
        "usage": {
          "input_tokens": 40,
          "input_tokens_details": {
            "cached_tokens": 0
          },
          "output_tokens": 22,
          "output_tokens_details": {
            "reasoning_tokens": 0
          },
          "total_tokens": 62
        }
      }
    }
  },
  {
    "event": "",
    "data": "[DONE]"
  }
]
